# IGWEB

./: .env.example  .replit  README.md  bot_data.sqlite  cookies.txt  csrf_response.json  error_integration.py  install.bat  main.py  package-lock.json  package.json  pyproject.toml  replit.md  run.bat  start-servers.sh  stop.bat  tailwind.config.ts  test_error_system.py
attached_assets/: Pasted-Good-I-read-your-project-README-carefully-and-did-a-deep-study-of-the-architecture-auth-flow-mod-1758463128307_1758463128307.txt  Pasted-Good-I-read-your-project-README-carefully-and-did-a-deep-study-of-the-architecture-auth-flow-mod-1758465265818_1758465265818.txt  Pasted-I-did-a-deep-read-of-your-README-and-overall-project-layout-big-file-very-useful-Below-I-list-A-1758471780152_1758471780153.txt  Pasted-I-did-a-deep-read-of-your-README-and-overall-project-layout-big-file-very-useful-Below-I-list-A-1758473774898_1758473774898.txt  Pasted-I-did-a-deep-read-of-your-README-and-overall-project-layout-big-file-very-useful-Below-I-list-A-1758476169616_1758476169616.txt  Pasted-I-did-a-deep-read-of-your-README-and-overall-project-layout-big-file-very-useful-Below-I-list-A-1758477881430_1758477881430.txt  Pasted-I-did-a-deep-read-of-your-README-and-overall-project-layout-big-file-very-useful-Below-I-list-A-1758478046191_1758478046191.txt  Pasted-Nice-I-did-a-deep-read-of-your-README-and-overall-project-layout-big-file-very-useful-Below-I--1758467188678_1758467188679.txt  main (2)_1758006474282.py  requirements_1758006507746.txt  (+2 more)
bot/: __init__.py  api.py  bot_instance.py  main.py  (+2 more)
(+41 files in other folders)
