[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask==2.3.3",
    "instagrapi==2.0.0",
    "requests==2.31.0",
    "schedule==1.2.0",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.3.0",
    "gunicorn>=23.0.0",
    "flask-cors>=6.0.1",
    "pillow>=11.3.0",
    "cryptography>=46.0.1",
]
